--- a/IT250423 - 30JUNE2025 -  Palak.md
+++ b/IT250423 - 30JUNE2025 -  Palak.md
@@ -1,6 +1,14 @@
+# IT250423 - 30JUNE2025 -  Palak
+
 # Question 1
 
 ## Part A
 
 **Here is the solution of the problem, that how we can fix the issue if our Computer is running out of the memory:-**
 [https://www.easeus.com/computer-instruction/your-computer-is-low-on-memory.html]
+
+
+## Part B
+
+
+
