Update IT250423 - 30JUNE2025 -  Palak.md

--- a/IT250423 - 30JUNE2025 -  Palak.md
+++ b/IT250423 - 30JUNE2025 -  Palak.md
@@ -9,6 +9,17 @@
 
 
 ## Part B
+Find a  3 sites with basic MS Windows memory Troubleshooting:-
+
+*Here are some websites, which are explaining about MS Windows memory Troubleshooting*
+
+https://www.pcmag.com/how-to/how-to-check-for-memory-problems-in-windows
+https://www.ninjaone.com/blog/how-to-run-windows-memory-diagnostics-tool/
+http://hs.windows.microsoft.com/hhweb/content/m-en-us/p-6.2/id-4edd5f80-def2-4d32-965c-116d49fb9872/
+
+
+
+
 
 
 
