Update IT250423 - 30JUNE2025 -  Palak.md
Part A
I add the questions about the problem.

--- a/IT250423 - 30JUNE2025 -  Palak.md
+++ b/IT250423 - 30JUNE2025 -  Palak.md
@@ -3,6 +3,8 @@
 # Question 1
 
 ## Part A
+1.What are the symptoms or signs of the problem?
+2. When did the problem start?
 
 **Here is the solution of the problem, that how we can fix the issue if our Computer is running out of the memory:-**
 [https://www.easeus.com/computer-instruction/your-computer-is-low-on-memory.html]
@@ -20,6 +22,11 @@ http://hs.windows.microsoft.com/hhweb/content/m-en-us/p-6.2/id-4edd5f80-def2-4d3
 
 ## Part C
 **Find a few sites with troubleshooting MS windows application in general:-**
+
+*Below the given sites are giving the description that how we can fix the issue of troubleshooting MS windows application*
+
+https://answers.microsoft.com/en-us/windows/forum/all/microsoft-windows-the-application-is-not/a2c5d03b-76ee-4ba6-a6ff-2b9cf02b421f
+
 
 
 
