--- a/IT250423 - 30JUNE2025 -  Palak.md
+++ b/IT250423 - 30JUNE2025 -  Palak.md
@@ -2,6 +2,8 @@
 
 # Question 1
 
+(Application Says it is running out of memory)
+
 ## Part A
 1.What are the symptoms or signs of the problem?
 2. When did the problem start?
