Update IT250423 - 30JUNE2025 -  Palak.md
In the Question 2, there is an explanation about the usage and features of windows file explorer.

--- a/IT250423 - 30JUNE2025 -  Palak.md
+++ b/IT250423 - 30JUNE2025 -  Palak.md
@@ -31,6 +31,15 @@ https://answers.microsoft.com/en-us/windows/forum/all/microsoft-windows-the-appl
 https://www.ninjaone.com/blog/how-to-repair-apps-and-programs-in-windows/
 
 
+# Question 2
+
+**Find 3 sites that are tutorials on Windows File Explorer**
+https://support.microsoft.com/en-us/windows/file-explorer-in-windows-ef370130-1cca-9dc5-e0df-2f7416fe1cb1
+https://www.xda-developers.com/file-explorer-windows-11/
+https://www.youtube.com/watch?v=pgJv7jTR6wQ
+
+
+
 
 
 
