Update IT250423 - 30JUNE2025 -  Palak.md

--- a/IT250423 - 30JUNE2025 -  Palak.md
+++ b/IT250423 - 30JUNE2025 -  Palak.md
@@ -1,4 +1,4 @@
-# IT250423 - 30JUNE2025 -  Palak
+[# IT250423 - 30JUNE2025 -  Palak
 
 # Question 1
 
@@ -34,6 +34,7 @@ https://www.ninjaone.com/blog/how-to-repair-apps-and-programs-in-windows/
 # Question 2
 
 **Find 3 sites that are tutorials on Windows File Explorer**
+
 https://support.microsoft.com/en-us/windows/file-explorer-in-windows-ef370130-1cca-9dc5-e0df-2f7416fe1cb1
 https://www.xda-developers.com/file-explorer-windows-11/
 https://www.youtube.com/watch?v=pgJv7jTR6wQ
@@ -45,3 +46,4 @@ https://www.youtube.com/watch?v=pgJv7jTR6wQ
 
 
 
+](https://www.youtube.com/watch?v=pgJv7jTR6wQ)
